--- a/css/styles.css
+++ b/css/styles.css
@@ -680,6 +680,15 @@ input[type='checkbox'] {
 	margin-bottom: 1rem;
 }
 
+.basic-2 .list-unstyled .fas {
+	font-size: 0.375rem;
+	line-height: 1.625rem;
+}
+
+.basic-2 .list-unstyled .media-body {
+	margin-left: 0.5rem;
+}
+
 .basic-2 p {
 	margin-bottom: 1.375rem;
 }
